# tic-tac-toe

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
tictactoe/: __init__.py  __main__.py  tictactoe_curses.py  tictactoe_logic.py
